# opencv_yolo

./: CMakeLists.txt  Makefile  README.md  main.cpp  opencv_yolo_run.bat  yoloNet.cpp  yoloNet.hpp  yolov3-tiny_face.cfg
